Bug 18361 - systemtap doesn't realize RHEL7 kernels require secure-boot signed modules
Summary: systemtap doesn't realize RHEL7 kernels require secure-boot signed modules
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-30 17:45 UTC by David Smith
Modified: 2015-04-30 17:57 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Smith 2015-04-30 17:45:32 UTC
Systemtap doesn't realize RHEL7 kernels require secure-boot signed modules. This is because RHEL7 has an extra level of security. This feature is shown here:

<https://patchwork.kernel.org/patch/2862151/>

Systemtap will need to support this BSD-style 'securelevel' feature.
Comment 1 David Smith 2015-04-30 17:57:08 UTC
Fixed in commit ed64d10.