Fix PR18361 by supporting RHEL7's 'securelevel' feature.

* session.cxx (modules_must_be_signed): Check the
  '/sys/kernel/security/securelevel' file for the value '1'. If so,
  modules must be signed.